# edmv

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration.rs
