[package]
name = "edmv"
version = "0.0.1"
description = "Bulk rename files using your favorite editor"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/edmv"
repository = "https://github.com/terror/edmv"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "utility"]
resolver = "2"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
path-absolutize = "3.1.0"
tempdir = "0.3.7"
tempfile = "3.6.0"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.3.0"
unindent = "0.2.1"
