[package]
name = "edmv"
version = "1.0.0"
description = "Bulk rename files using your favorite editor"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/edmv"
repository = "https://github.com/terror/edmv"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["command-line", "productivity", "utility"]
resolver = "2"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
path-absolutize = "3.1.0"
tempfile = "3.6.0"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.3.0"
unindent = "0.2.1"
once_cell = "1.18.0"
